added radio buttons

--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
         <form class="row">
             <div class="col-sm-12">
                 <h1>Temperature Converter</h1>
+                <input type="radio" value="tempF" id="tempF" name="unit" onclick="selectUnit()"><span>Convert Fahrenheit to Celsius</span>
+                <input type="radio" value="tempC" id="tempC" name="unit" onclick="selectUnit()"><span>Convert Celsius to Fahrenhiet</span>
                 <input id="fahrenheitInput" type="text" onkeyup="toCelsius()">
-                <span>Convert temperature to Fahrenheit</span><br>
-                <input id="celsiusInput" type="text" onkeyup="toFahrenheit()">
-                <span>Convert temperature to Celsius</span> 
+                <input id="celsiusInput" type="text" onkeyup="toFahrenheit()">  
+                <p id="convertedTemp"></p>
             </div>
         </form>
     </div>
-    <p id="info"></p>
+    
     
 <script src="js/main.js"></script>    
 </body>
