small text change

--- a/newIndex.html
+++ b/newIndex.html
@@ -13,7 +13,7 @@
                 <h1>Temperature Converter</h1>
                 <!-- <radio buttons for unit selection> --> 
                 <input type="radio" value="tempF" id="tempF" name="unit"><span>Convert Fahrenheit to Celsius</span>
-                <input type="radio" value="tempC" id="tempC" name="unit"><span>Convert Celsius to Fahrenhiet</span>
+                <input type="radio" value="tempC" id="tempC" name="unit"><span>Convert Celsius to Fahrenheit</span>
                 <!-- <trigger convertTemp() function onkeyup> --> 
                 <input id="temp" type="text" onkeyup="convertTemp()">
                 <!-- <place to display converted temp result> --> 
