set up files and made numerous changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="col-sm-12">
                 <h1>Temperature Converter</h1>
                 <input type="radio" value="tempF" id="tempF" name="unit" onclick="selectUnit()"><span>Convert Fahrenheit to Celsius</span>
-                <input type="radio" value="tempC" id="tempC" name="unit" onclick="selectUnit()"><span>Convert Celsius to Fahrenhiet</span>
+                <input type="radio" value="tempC" id="tempC" name="unit" onclick="selectUnit()"><span>Convert Celsius to Fahrenheit</span>
                 <input id="fahrenheitInput" type="text" onkeyup="toCelsius()">
                 <input id="celsiusInput" type="text" onkeyup="toFahrenheit()">  
                 <p id="convertedTemp"></p>
